libs/slim/test/typecheck/fail/call_not_callable.shader
shader vertex {
    int foo = 0;
    foo();
    return vec4(0.0, 0.0, 0.0, 1.0);
}
